--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 					<div class="card-wrap col col-m-12 col-t-12 col-d-8 col-d-lg-6" data-simplebar>
 
 						<!-- Resume Image -->
-						<div class="card-image col col-m-12 col-t-12 col-d-4 col-d-lg-6" style="background-image: url(images/profile2.jpg);"></div>
+						<div class="card-image col col-m-12 col-t-12 col-d-4 col-d-lg-6" style="background-image: url(img/about.jpg);"></div>
 
 						<!--
 							Inner Top
@@ -600,14 +600,14 @@
 							Resume
 						-->
 						<div class="content resume">
-						<div class="row">
-						<div class="col col-m-12 col-t-6 col-d-6 col-d-lg-6">
+							<div class="row">
+								<div class="col col-m-12 col-t-6 col-d-6 col-d-lg-6">
 
-						<!-- title -->
-						<div class="title"><span>My</span> Experience</div>
+									<!-- title -->
+									<div class="title"><span>My</span> Experience</div>
 
-						<!-- resume items -->
-						<div class="resume-items card-box">
+									<!-- resume items -->
+									<div class="resume-items card-box">
 
 										<!-- resume item -->
 										<div class="resume-item">
@@ -806,7 +806,7 @@
 					<div class="card-wrap col col-m-12 col-t-12 col-d-8 col-d-lg-6" data-simplebar>
 
 						<!-- Work Image -->
-						<div class="card-image col col-m-12 col-t-12 col-d-4 col-d-lg-6" style="background-image: url(images/profile3.jpg);"></div>
+						<div class="card-image col col-m-12 col-t-12 col-d-4 col-d-lg-6" style="background-image: url(img/about.jpg);"></div>
 
 						<!--
 							Inner Top
@@ -1239,7 +1239,7 @@
 
 
 
-			
+
 			<!-- 
 				Card - Contacts
 			-->
